Bug 250029 - Refresh problem in price dialog after delete if something typed in search box
Summary: Refresh problem in price dialog after delete if something typed in search box
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-03 15:52 UTC by Jack
Modified: 2010-09-05 17:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2010-09-03 15:52:56 UTC
Version:           SVN trunk (using KDE 4.4.5) 
OS:                Linux

If I go to the price dialog, type something in the search box and then delete a price, after the deletion, the displayed list is incorrect.  Changing what is in the search box lets the list refresh correctly.

Reproducible: Always

Steps to Reproduce:
Bring up the price dialog.  Enter something in the search box.  Delete one of the prices shown.  

Actual Results:  
No prices are shown in the dialog, unless you change the entry in the search box.

Expected Results:  
All prices shown should remain, except for the deleted price, which might be replaced by an earlier price for the same security.

Every time I've done this, I have two items displayed - the same trading symbol but different names.  I don't know if that matters.
Comment 1 Alvaro Soliverez 2010-09-05 17:37:15 UTC
SVN commit 1171878 by asoliverez:

After refreshing the price list, update the list with the contents of the search widget.

BUG:250029

 M  +3 -0      kmymoneypricedlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171878
Comment 2 Alvaro Soliverez 2010-09-05 17:56:21 UTC
SVN commit 1171892 by asoliverez:

Ported to stable branch

BUG:250029

 M  +4 -0      kmymoneypricedlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171892
Comment 3 Alvaro Soliverez 2010-09-05 17:57:23 UTC
SVN commit 1171893 by asoliverez:

Update only if there is text on the search widget

BUG:250029

 M  +1 -0      kmymoneypricedlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171893