After refreshing the price list, update the list with the contents of the search widget.

BUG:250029

svn path=/trunk/extragear/office/kmymoney/; revision=1171878