kmymoney/dialogs/kmymoneypricedlg.cpp
@@ -152,6 +152,9 @@ void KMyMoneyPriceDlg::slotLoadWidgets(void)
   //reenable sorting and sort by the commodity column
   m_priceList->setSortingEnabled(true);
   m_priceList->sortByColumn(KPriceTreeItem::ePriceCommodity);
+
+  //update the search widget so the list gets refreshed correctly if it was being filtered
+  m_searchWidget->searchLine()->updateSearch(m_searchWidget->searchLine()->text());
 }
 
 QTreeWidgetItem* KMyMoneyPriceDlg::loadPriceItem(const MyMoneyPrice& basePrice)
